[tool.poetry]
name = "coinmonitor"
version = "0.1.0"
description = "This is a webscraper for coinmarketcap.com"
authors = ["Arnor Davidsson <akdavids@protonmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.6"
beautifulsoup4 = "^4.9.3"
requests = "^2.25.1"
schedule = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
